--- a/index.html
+++ b/index.html
@@ -6,14 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; }
-    h1 { color: #333; }
-    p { line-height: 1.6; }
+    h1, h2 { color: #2c3e50; }
+    p { line-height: 1.6; margin-bottom: 16px; }
+    footer { margin-top: 40px; font-size: 0.9em; color: #777; }
   </style>
 </head>
 <body>
   <h1>Política de Privacidade</h1>
-  <p>Este aplicativo foi criado apenas para fins de teste e desenvolvimento.</p>
-  <p>Não coletamos, armazenamos ou compartilhamos nenhuma informação pessoal dos usuários.</p>
-  <p>Se tiver dúvidas, entre em contato pelo e-mail: seuemail@exemplo.com</p>
+
+  <p>Esta Política de Privacidade descreve como as informações são tratadas pelo aplicativo desenvolvido com fins de teste e demonstração.</p>
+
+  <h2>1. Coleta de Informações</h2>
+  <p>Este aplicativo não coleta, armazena ou compartilha informações pessoais dos usuários. Nenhum dado sensível, identificável ou de navegação é armazenado ou transmitido a servidores de terceiros.</p>
+
+  <h2>2. Uso do Aplicativo</h2>
+  <p>O aplicativo é voltado exclusivamente para fins de desenvolvimento, teste e demonstração. Não se destina ao uso comercial ou à coleta de dados de usuários reais.</p>
+
+  <h2>3. Compartilhamento de Dados</h2>
+  <p>Não compartilhamos nenhuma informação com terceiros, uma vez que nenhum dado é coletado.</p>
+
+  <h2>4. Segurança</h2>
+  <p>Embora o aplicativo não armazene dados, seguimos boas práticas de desenvolvimento para garantir que não haja vulnerabilidades ou riscos à segurança dos usuários.</p>
+
+  <h2>5. Alterações nesta Política</h2>
+  <p>Esta política pode ser atualizada a qualquer momento, sem aviso prévio, conforme as necessidades do projeto.</p>
+
+  <h2>6. Contato</h2>
+  <p>Se você tiver dúvidas sobre esta Política de Privacidade, entre em contato pelo e-mail: <strong>adriano.luiz.souza@icloud.com</strong></p>
+
+  <footer>
+    Última atualização: abril de 2025
+  </footer>
 </body>
 </html>
